add react-dropzone to improve the uploads ui and implement multiple file uploads
