# libs/shared-types/generated/php/Model/MediaUploadsPostResponse201.php
@@ -1,0 +1,43 @@
+<?php
+
+namespace OpenFileSharing\Dto\Model;
+
+class MediaUploadsPostResponse201 extends \ArrayObject
+{
+    /**
+     * @var array
+     */
+    protected $initialized = [];
+    public function isInitialized($property): bool
+    {
+        return array_key_exists($property, $this->initialized);
+    }
+    /**
+     * 
+     *
+     * @var list<FileMetadata>
+     */
+    protected $data;
+    /**
+     * 
+     *
+     * @return list<FileMetadata>
+     */
+    public function getData(): array
+    {
+        return $this->data;
+    }
+    /**
+     * 
+     *
+     * @param list<FileMetadata> $data
+     *
+     * @return self
+     */
+    public function setData(array $data): self
+    {
+        $this->initialized['data'] = true;
+        $this->data = $data;
+        return $this;
+    }
+}
