# libs/shared-types/generated/php/Normalizer/MediaUploadsPostBodyNormalizer.php
@@ -11,7 +11,7 @@ use Symfony\Component\Serializer\Normalizer\DenormalizerInterface;
 use Symfony\Component\Serializer\Normalizer\NormalizerAwareInterface;
 use Symfony\Component\Serializer\Normalizer\NormalizerAwareTrait;
 use Symfony\Component\Serializer\Normalizer\NormalizerInterface;
-class MediaUploadPostBodyNormalizer implements DenormalizerInterface, NormalizerInterface, DenormalizerAwareInterface, NormalizerAwareInterface
+class MediaUploadsPostBodyNormalizer implements DenormalizerInterface, NormalizerInterface, DenormalizerAwareInterface, NormalizerAwareInterface
 {
     use DenormalizerAwareTrait;
     use NormalizerAwareTrait;
@@ -19,11 +19,11 @@ class MediaUploadPostBodyNormalizer implements DenormalizerInterface, Normalizer
     use ValidatorTrait;
     public function supportsDenormalization(mixed $data, string $type, ?string $format = null, array $context = []): bool
     {
-        return $type === \OpenFileSharing\Dto\Model\MediaUploadPostBody::class;
+        return $type === \OpenFileSharing\Dto\Model\MediaUploadsPostBody::class;
     }
     public function supportsNormalization(mixed $data, ?string $format = null, array $context = []): bool
     {
-        return is_object($data) && get_class($data) === \OpenFileSharing\Dto\Model\MediaUploadPostBody::class;
+        return is_object($data) && get_class($data) === \OpenFileSharing\Dto\Model\MediaUploadsPostBody::class;
     }
     public function denormalize(mixed $data, string $type, ?string $format = null, array $context = []): mixed
     {
@@ -33,21 +33,21 @@ class MediaUploadPostBodyNormalizer implements DenormalizerInterface, Normalizer
         if (isset($data['$recursiveRef'])) {
             return new Reference($data['$recursiveRef'], $context['document-origin']);
         }
-        $object = new \OpenFileSharing\Dto\Model\MediaUploadPostBody();
+        $object = new \OpenFileSharing\Dto\Model\MediaUploadsPostBody();
         if (null === $data || false === \is_array($data)) {
             return $object;
         }
-        if (\array_key_exists('file', $data)) {
-            $object->setFile($data['file']);
-            unset($data['file']);
+        if (\array_key_exists('files', $data)) {
+            $values = [];
+            foreach ($data['files'] as $value) {
+                $values[] = $value;
+            }
+            $object->setFiles($values);
+            unset($data['files']);
         }
-        if (\array_key_exists('metadata', $data)) {
-            $object->setMetadata($this->denormalizer->denormalize($data['metadata'], \OpenFileSharing\Dto\Model\UploadRequest::class, 'json', $context));
-            unset($data['metadata']);
-        }
-        foreach ($data as $key => $value) {
+        foreach ($data as $key => $value_1) {
             if (preg_match('/.*/', (string) $key)) {
-                $object[$key] = $value;
+                $object[$key] = $value_1;
             }
         }
         return $object;
@@ -55,21 +55,22 @@ class MediaUploadPostBodyNormalizer implements DenormalizerInterface, Normalizer
     public function normalize(mixed $data, ?string $format = null, array $context = []): array|string|int|float|bool|\ArrayObject|null
     {
         $dataArray = [];
-        if ($data->isInitialized('file') && null !== $data->getFile()) {
-            $dataArray['file'] = $data->getFile();
+        if ($data->isInitialized('files') && null !== $data->getFiles()) {
+            $values = [];
+            foreach ($data->getFiles() as $value) {
+                $values[] = $value;
+            }
+            $dataArray['files'] = $values;
         }
-        if ($data->isInitialized('metadata') && null !== $data->getMetadata()) {
-            $dataArray['metadata'] = $this->normalizer->normalize($data->getMetadata(), 'json', $context);
-        }
-        foreach ($data as $key => $value) {
+        foreach ($data as $key => $value_1) {
             if (preg_match('/.*/', (string) $key)) {
-                $dataArray[$key] = $value;
+                $dataArray[$key] = $value_1;
             }
         }
         return $dataArray;
     }
     public function getSupportedTypes(?string $format = null): array
     {
-        return [\OpenFileSharing\Dto\Model\MediaUploadPostBody::class => false];
+        return [\OpenFileSharing\Dto\Model\MediaUploadsPostBody::class => false];
     }
 }
